testing/tests/ui/as-primitive-type.stderr
error: `as` operator expects the name of a primitive type on its right-hand side
 --> <source attribute>:1:9
  |
       1 | {{ 1234 as 4567 }}
         |         ^ close to this token
         |
 --> tests/ui/as-primitive-type.rs:4:12
  |
4 | #[template(source = r#"{{ 1234 as 4567 }}"#, ext = "html")]
  |            ^^^^^^

error: `as` operator expects the name of a primitive type on its right-hand side
 --> <source attribute>:1:9
  |
       1 | {{ 1234 as ? }}
         |         ^ close to this token
         |
 --> tests/ui/as-primitive-type.rs:8:12
  |
8 | #[template(source = r#"{{ 1234 as ? }}"#, ext = "html")]
  |            ^^^^^^

error: `as` operator expects the name of a primitive type on its right-hand side, found `u1234`
 --> <source attribute>:1:9
  |
       1 | {{ 1234 as u1234 }}
         |         ^ close to this token
         |
  --> tests/ui/as-primitive-type.rs:12:12
   |
12 | #[template(source = r#"{{ 1234 as u1234 }}"#, ext = "html")]
   |            ^^^^^^

error: `as` operator expects the name of a primitive type on its right-hand side, found `core`
 --> <source attribute>:1:9
  |
       1 | {{ 1234 as core::primitive::u32 }}
         |         ^ close to this token
         |
  --> tests/ui/as-primitive-type.rs:16:12
   |
16 | #[template(source = r#"{{ 1234 as core::primitive::u32 }}"#, ext = "html")]
   |            ^^^^^^

error: `as` operator expects the name of a primitive type on its right-hand side, found `int32_t`
 --> <source attribute>:1:9
  |
       1 | {{ 1234 as int32_t }}
         |         ^ close to this token
         |
  --> tests/ui/as-primitive-type.rs:20:12
   |
20 | #[template(source = r#"{{ 1234 as int32_t }}"#, ext = "html")]
   |            ^^^^^^

error: `as` operator expects the name of a primitive type on its right-hand side, found `int32_t`
 --> <source attribute>:1:36
  |
       1 | {{ (1234 + 4 * 12 / 45675445 - 13) as int32_t }}
         |                                    ^ close to this token
         |
  --> tests/ui/as-primitive-type.rs:24:12
   |
24 | #[template(source = r#"{{ (1234 + 4 * 12 / 45675445 - 13) as int32_t }}"#, ext = "html")]
   |            ^^^^^^
